tests/corpus/pass/phase1/50_while_sum.gw
fn main() -> i32 {
    let i: i32 = 0;
    let sum: i32 = 0;
    while i < 5 {
        sum = sum + i;
        i = i + 1;
    }
    return sum;
}
